docker/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goexamplefrontendservice
  labels:
    app: goexample
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: goexample
